as it needs to be

--- a/app/src/main/res/values/attrs_custom_view.xml
+++ b/app/src/main/res/values/attrs_custom_view.xml
@@ -3,6 +3,7 @@
         <attr name="exampleString" format="string" />
         <attr name="exampleColor" format="color" />
         <attr name="exampleDrawable" format="color|reference" />
+        <attr name="defaultCustomViewStyleAttr" format="reference"/>
     </declare-styleable>
     <declare-styleable name="ChildCustomView">
         <attr name="defaultChildCustomViewStyleAttr" format="reference"/>
