--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,15 @@
 
     <xyz.mperminov.viewconstructorssample.CustomView
         android:id="@+id/customView"
-        app:exampleColor="@color/purple_500"
         app:exampleString="@string/parent"
-        app:exampleDrawable="@drawable/logo"
+        app:exampleColor="@color/purple_500"
         android:layout_width="200dp"
         android:layout_height="200dp"/>
 
     <xyz.mperminov.viewconstructorssample.ChildCustomView
         android:id="@+id/childCustomView"
-        app:exampleColor="@color/red"
-        app:exampleDrawable="@drawable/child"
+        app:exampleString="@string/child"
+        app:exampleColor="@color/rose"
         android:layout_marginTop="32dp"
         android:layout_width="200dp"
         android:layout_height="200dp"/>
