--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-<item name="defaultCustomViewStyleAttr">@style/Widget.Theme.ViewConstructorsSample.MyView.Red</item>
-<item name="defaultChildCustomViewStyleAttr">@style/Widget.Theme.ViewConstructorsSample.ChildCustomView</item>
+        <item name="defaultCustomViewStyleAttr">
+            @style/Widget.Theme.ViewConstructorsSample.CustomView
+        </item>
+        <item name="defaultChildCustomViewStyleAttr">
+            @style/Widget.Theme.ViewConstructorsSample.ChildCustomView
+        </item>
     </style>
 
     <style name="Theme.ViewConstructorsSample.NoActionBar">
