--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,15 +2,16 @@
 
     <style name="Widget.Theme.ViewConstructorsSample.MyView" parent="">
         <item name="android:background">@color/black</item>
-        <item name="exampleColor">@color/light_blue_400</item>
+        <item name="exampleTextColor">@color/light_blue_400</item>
     </style>
 
-    <style name="Widget.Theme.ViewConstructorsSample.MyView.Red" parent="">
+    <style name="Widget.Theme.ViewConstructorsSample.CustomView" parent="">
         <item name="android:background">@android:color/holo_red_dark</item>
     </style>
 
     <style name="Widget.Theme.ViewConstructorsSample.ChildCustomView" parent="">
         <item name="exampleString">@string/danzig</item>
+        <item name="exampleDrawable">@drawable/child</item>
     </style>
 
 </resources>
